# sk-clip-desktop

./: .gitignore  APPCONTEST.md  Cargo.toml  GUIDE.md  INTRODUCTION.md  LICENSE  README.ja.md  README.md  README.zh.md  Trunk.toml  index.html  package.json  styles.css
.cargo/: config.toml
docs/: debug-and-build.md  development-setup.md  updating-rust.md  usage.md
models/: README.md  models.json  proxy_config.json  user_config.json
models/translation/: .gitkeep
models/tts/: .gitkeep
models/whisper/: .gitkeep
src/: App.css  App.tsx  app.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  document_parser.rs  file_manager.rs  lib.rs  main.rs  models.rs  video_processor.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/ai/translation/: mod.rs  model.rs  processor.rs
src-tauri/src/ai/tts/: config.rs  mod.rs  model.rs  processor.rs
src-tauri/src/ai/whisper/: mod.rs  model.rs  processor.rs
src-tauri/src/commands/: ai.rs  basic.rs  config.rs  document.rs  mod.rs  proxy.rs  timeline.rs  video.rs
src-tauri/src/document/: converter.rs  extractor.rs  mod.rs  parser.rs
src-tauri/src/model_manager/: config.rs  downloader.rs  mod.rs  proxy.rs  storage.rs
src-tauri/src/utils/: file_utils.rs  logger.rs  mod.rs  time_utils.rs  validation.rs
src-tauri/src/video/: analyzer.rs  converter.rs  editor.rs  mod.rs  processor.rs
src/api/: mod.rs  tauri.ts
src/components/: common.rs  document_import.rs  mod.rs  project_timeline.rs  settings_panel.rs  translation_panel.rs  video_upload.rs
src/components/common/: Button.tsx  ErrorMessage.tsx  LoadingSpinner.tsx  SuccessMessage.tsx
src/components/layout/: EditorHeader.tsx
src/components/materials/: DocumentImport.tsx  MaterialsPanel.tsx  VideoUpload.tsx
src/components/preview/: PreviewArea.tsx
src/components/settings/: SettingsPanel.tsx
src/components/timeline/: ProjectTimeline.tsx
src/components/translation/: TranslationPanel.tsx
src/context/: AppContext.tsx
src/styles/: README.md  base.css  components.css  editor-layout.css  layout.css  main.css  navigation.css  translation-panel.css  variables.css  video-upload.css
src/types/: index.ts  mod.rs  timeline.ts
src/utils/: mod.rs
