[package]
name = "multisay-tauri-desktop-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["SK Studio"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "multisay_tauri_desktop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.4", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
tempfile = "3.8"
log = "0.4"
dotenv = "0.15"
dirs = "5.0"
anyhow = "1.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

