[package]
name = "caiqi-clip"
version = "0.1.0"
description = "彩旗剪辑 - 专业视频剪辑与翻译工具"
authors = ["SK Studio"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "caiqi_clip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.4", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2.0"
tempfile = "3.8"
log = "0.4"
dotenv = "0.15"
dirs = "6.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# AI模型相关依赖
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.4"
tokenizers = "0.21"

# 音频处理
rodio = "0.20"
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }

# 视频处理 (通过命令行调用FFmpeg)
# ffmpeg-next = "7.1"  # 暂时移除，使用命令行方式

# 文档处理
zip = "4.0"
quick-xml = "0.37"
pulldown-cmark = "0.13"
lopdf = "0.36"

# HTTP客户端用于下载模型
reqwest = { version = "0.12", features = ["json", "stream"] }

# 日志相关
env_logger = "0.11"

