[package]
name = "sk-clip"
version = "0.1.0"
description = "彩旗剪辑 - 专业视频剪辑与翻译工具"
authors = ["SK Studio"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sk_clip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.23", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2.0"
tempfile = "3.27"
log = "0.4"
dotenv = "0.15"
dirs = "6.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
hf-hub = "0.5"
tokenizers = "0.23"
rodio = "0.22"
hound = "3.5"
symphonia = { version = "0.6", features = ["all"] }
zip = "8.6"
quick-xml = "0.40"
pulldown-cmark = "0.13"
lopdf = "0.40"
reqwest = { version = "0.13", features = ["json", "stream"] }
env_logger = "0.11"
